--- a/index.html
+++ b/index.html
@@ -5,7 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+
+
+<body><!-- texte de bienvenu-->
+    <div> 
+        <h1></h1>
+        <p></p>
+    </div>
+
+    <div> 
+        <h2></h2>
+        <div></div> <!-- div avec le boostrap-->
+        <p></p>
+    </div>
+
+    <div> 
+        <h2></h2>
+        <div></div> <!-- div avec le boostrap2-->
+        <p></p>
+    </div>
+
+    <div> 
+        <h2></h2>
+        <div></div> <!-- div avec les boutons-->
+        <p></p>
+    </div>
+
     
 </body>
 </html>
