pseudo derniere version

--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
 </head>
 
 
-<body><!-- texte de bienvenu-->
-    <div> 
+<body>
+    <header>
+        <div><!--le menu-->
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div><!--ici le logo-->
+        </div>
+    </header>
+
+    <div> <!-- texte de bienvenu-->
         <h1></h1>
         <p></p>
     </div>
@@ -25,11 +35,74 @@
         <p></p>
     </div>
 
-    <div> 
+    <div>
         <h2></h2>
-        <div></div> <!-- div avec les boutons-->
+        <div><!-- div avec les boutons-->
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
         <p></p>
     </div>
+
+    <div>
+        <div><!-- div avec le text, celui de martin-->
+            <h2></h2>
+            <div>
+                <h3></h3>
+            </div>
+            <div>
+                <p></p>
+            </div>
+            <div>
+                <p></p>
+            </div>
+            <div>
+                <p></p>
+            </div>
+        </div>
+    </div>
+
+    <div><!--div avec la team cinema-->
+        <h2></h2>
+        <div>
+            <div>
+                <div></div>
+                <div></div>
+            </div>
+            <div>
+                <div></div>
+                <div></div>
+            </div>
+            <div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </div>
+
+    <div>
+        <h2></h2>
+        <div></div><!--mettre la carte google ici-->
+    </div>
+
+    <footer>
+        <div><!--les boutons menu-->
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div>
+            <div></div><!--logo-->
+            <div></div><!--info-->
+            <div></div>
+            <div></div><!--logo facebook et insta-->
+        </div>
+        <div></div><!--info-->
+
+    </footer>
 
     
 </body>
