--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
     </header>
 
     <div> <!-- texte de bienvenu-->
-        <h1></h1>
-        <p></p>
+        <h1>Bienvenue au Cinema Le Festival !</h1>
+        <p>Specialisé dans le cinéma d'animation et d'effets spéciaux à Bègles !</p>
     </div>
 
     <div> 
-        <h2></h2>
+        <h2>Nos Films à l'affiche</h2>
         <div></div> <!-- div avec le boostrap-->
-        <p></p>
+        <p>Voir plus de films</p>
     </div>
 
     <div> 
-        <h2></h2>
+        <h2>Nos Événements</h2>
         <div></div> <!-- div avec le boostrap2-->
-        <p></p>
+        <p>Voir plus  d'événement</p>
     </div>
 
     <div>
-        <h2></h2>
+        <h2>Nos Services</h2>
         <div><!-- div avec les boutons-->
             <div></div>
             <div></div>
@@ -48,24 +48,26 @@
 
     <div>
         <div><!-- div avec le text, celui de martin-->
-            <h2></h2>
+            <h2>Notre Cinéma</h2>
             <div>
-                <h3></h3>
+                <h3>Ici vous pouvez retrouver des informations au sujet de notre cinéma</h3>
             </div>
             <div>
-                <p></p>
+                <p>Situé à la barrière de Bègles, ''Le Festival'' propose des prix abordables pour tous, des séances à partir de 5€, mais également des soirées à thème, des séances déguisées, des possibilités pour les enfants de fêter leur anniversaire, des tournois Mario Kart… sans oublier le festival international du film d'animation ''Les Nuits Magiques'' ainsi que le festival du film d'animation pour la petite enfance ''Les P'tits Cartooneurs''  !</p>
             </div>
             <div>
-                <p></p>
+                <p>Deux salles Paul GRIMAULT et René LALOUX 
+                    (290 et 78 places) ; Accès handicapés ; 35 mm ; 3D</p>
             </div>
             <div>
-                <p></p>
+                <p>Autant de bonnes raisons de venir
+                    au cinéma ''Le Festival'' ! </p>
             </div>
         </div>
     </div>
 
     <div><!--div avec la team cinema-->
-        <h2></h2>
+        <h2>Notre équipe : </h2>
         <div>
             <div>
                 <div></div>
