--- a/index.html
+++ b/index.html
@@ -38,9 +38,15 @@
     <div>
         <h2>Nos Services</h2>
         <div><!-- div avec les boutons-->
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <p>Initiation dessin animés</p>
+            </div>
+            <div>
+                <p>Stage réalisation</p>
+            </div>
+            <div>
+                <p>Projection à la demande</p>
+            </div>
             <div></div>
         </div>
         <p></p>
@@ -70,22 +76,47 @@
         <h2>Notre équipe : </h2>
         <div>
             <div>
-                <div></div>
-                <div></div>
+                <h3>Fabrice de la ROSA</h3>
+                <div>
+                    <p>Directeur & programmateur
+                        Bureau administratif
+                        Cofondateur de Flip-Book
+                        Et passionné d'animation</p>
+                </div>
+                <div>
+                    <p>Contact : 
+                        05.56.51.76.60
+                        contact@cinemalefestival.fr</p>
+                </div>
             </div>
             <div>
-                <div></div>
-                <div></div>
+                <H3>Christophe JULIÉ</H3>
+                <div>
+                    <p>Projectionniste & Animateur
+                        Cinéma "Le Festival"
+                        Chef d'ateliers
+                        </p>
+                </div>
+                <div>
+                    <p>Contact : 
+                        09.51.99.04.80
+                        contact@cinemalefestival.fr</p>
+                </div>
             </div>
             <div>
-                <div></div>
-                <div></div>
+                <h3>Fabrice de la ROSA</h3>
+                <div><p>Projectionniste & Animatrice
+                    Cinéma "Le Festival"
+                    Accueil
+                    </p></div>
+                <div><p>Contact : 
+                    09.51.99.04.80
+                    contact@cinemalefestival.fr</p></div>
             </div>
         </div>
     </div>
 
     <div>
-        <h2></h2>
         <div></div><!--mettre la carte google ici-->
     </div>
 
