--- a/index.html
+++ b/index.html
@@ -122,10 +122,16 @@
 
     <footer>
         <div><!--les boutons menu-->
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <h3>Programmation </h3>
+            </div>
+            <div>
+                <h3>Ateliers</h3>
+            </div>
+            <div>
+                <h3>Notre Cinéma</h3></div>
+            <div>
+                <h3>Contact</h3></div>
         </div>
         <div>
             <div></div><!--logo-->
@@ -133,7 +139,15 @@
             <div></div>
             <div></div><!--logo facebook et insta-->
         </div>
-        <div></div><!--info-->
+        <div>
+            <p>Si vous avez besoin de nous contacter : 
+                09.51.99.04.80 / 05.56.51.76.60
+                contact@cinemalefestival.fr</p>
+            <p>Notre adresse :
+                151 Boulevard ALBERT 1er
+                33130 Bègles</p>
+            <p>© 2012 Cinéma "Le Festival" de Bègles, tout droits réservés – Mentions légales  – Site réalisé par Dessert Web</p>
+        </div><!--info-->
 
     </footer>
 
