au moins il y a le logo

--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 <body>
     <header>
         <div><!--le menu-->
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div><!--ici le logo-->
+            <div><p>Programmation</p></div>
+            <div><p>Ateliers</p></div>
+            <div><p>Notre cinéma</p></div>
+            <div><p>Contact</p></div>
+            <div><img src =Img-logo\logo.png></div><!--ici le logo-->
         </div>
     </header>
-
     <div> <!-- texte de bienvenu-->
         <h1>Bienvenue au Cinema Le Festival !</h1>
         <p>Specialisé dans le cinéma d'animation et d'effets spéciaux à Bègles !</p>
