--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
 
     <div> 
         <h2>Nos Films à l'affiche</h2>
-        <div></div> <!-- div avec le boostrap-->
+        <div>
+            <img src=Img-flm\100_loup\Affiche.jpg>
+            <img src=Img-flm\Beetlejuice\Affiche.jpg>
+            <img src=Img-flm\BlackWidow\affiche.jpg>
+            <img src=>
+            <img src=>
+            <img src=>
+            <img src=>
+            <img src=>
+            <img src=>
+        </div> <!-- div avec le boostrap-->
         <p>Voir plus de films</p>
     </div>
 
