--- a/index.html
+++ b/index.html
@@ -24,17 +24,7 @@
 
     <div> 
         <h2>Nos Films à l'affiche</h2>
-        <div>
-            <img src=Img-flm\100_loup\Affiche.jpg>
-            <img src=Img-flm\Beetlejuice\Affiche.jpg>
-            <img src=Img-flm\BlackWidow\affiche.jpg>
-            <img src=>
-            <img src=>
-            <img src=>
-            <img src=>
-            <img src=>
-            <img src=>
-        </div> <!-- div avec le boostrap-->
+        <div></div> <!-- div avec le boostrap-->
         <p>Voir plus de films</p>
     </div>
 
@@ -64,6 +54,7 @@
     <div>
         <div><!-- div avec le text, celui de martin-->
             <h2>Notre Cinéma</h2>
+            <img src = img-logo\image-cine.jpg>
             <div>
                 <h3>Ici vous pouvez retrouver des informations au sujet de notre cinéma</h3>
             </div>
@@ -87,12 +78,14 @@
             <div>
                 <h3>Fabrice de la ROSA</h3>
                 <div>
+                    <img src=img-portrait\1.jpg>
                     <p>Directeur & programmateur
                         Bureau administratif
                         Cofondateur de Flip-Book
                         Et passionné d'animation</p>
                 </div>
                 <div>
+                    <img src=img-portrait\2.jpg>
                     <p>Contact : 
                         05.56.51.76.60
                         contact@cinemalefestival.fr</p>
@@ -101,6 +94,7 @@
             <div>
                 <H3>Christophe JULIÉ</H3>
                 <div>
+                    <img src=img-portrait\3.jpg>
                     <p>Projectionniste & Animateur
                         Cinéma "Le Festival"
                         Chef d'ateliers
@@ -126,7 +120,9 @@
     </div>
 
     <div>
-        <div></div><!--mettre la carte google ici-->
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3177.0318191972688!2d-0.5648688286896452!3d44.813136927981915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5527aac4575fe1%3A0x7daa99163ab271bf!2sLe%20Festival!5e0!3m2!1sfr!2sfr!4v1603199447077!5m2!1sfr!2sfr" width="1890" height="960" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div><!--mettre la carte google ici-->
     </div>
 
     <footer>
@@ -143,10 +139,13 @@
                 <h3>Contact</h3></div>
         </div>
         <div>
-            <div></div><!--logo-->
+            <div><img src = img-logo\logo.png></div><!--logo-->
             <div></div><!--info-->
             <div></div>
-            <div></div><!--logo facebook et insta-->
+            <div>
+                <img src = img-logo\pngegg_(9).png>
+                <img src = img-logo\pngegg_(10).png>
+            </div><!--logo facebook et insta-->
         </div>
         <div>
             <p>Si vous avez besoin de nous contacter : 
