j'ai commencer a faire les row et les col

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
     <div>
         <h2>Nos Services</h2>
         <div><!-- div avec les boutons-->
-            <div>
+            <div class="row">
                 <p>Initiation dessin animés</p>
             </div>
-            <div>
+            <div class="row">
                 <p>Stage réalisation</p>
             </div>
-            <div>
+            <div class="row">
                 <p>Projection à la demande</p>
             </div>
-            <div></div>
+            <div class="row"></div>
         </div>
         <p></p>
     </div>
