row and col workin

--- a/index.html
+++ b/index.html
@@ -44,25 +44,19 @@
         <p>Voir plus  d'événement</p>
     </div>
 
-    <div>
+    <div class="col">
         <h2>Nos Services</h2>
-        <div><!-- div avec les boutons-->
-            <div>
+        <div class="row"><!-- div avec les boutons-->
+            <div class="col">
                 <p>Initiation dessin animés</p>
             </div>
-            <div>
+            <div class="col">
                 <p>Stage réalisation</p>
             </div>
-            <div>
+            <div class="col">
                 <p>Projection à la demande</p>
             </div>
-        </header>
-    
-        <div> <!-- texte de bienvenu-->
-            <h1>Bienvenue au Cinema Le Festival !</h1>
-            <p>Specialisé dans le cinéma d'animation et d'effets spéciaux à Bègles !</p>
         </div>
-        <p></p>
     </div>
 
     <div>
@@ -88,25 +82,12 @@
     
         <div>
             <div><!-- div avec le text, celui de martin-->
-                <h2>Notre Cinéma</h2>
+                <h2>Nos Contacts </h2>
                 <div>
-                    <h3>Ici vous pouvez retrouver des informations au sujet de notre cinéma</h3>
-                </div>
-                <div>
-                    <p>Situé à la barrière de Bègles, ''Le Festival'' propose des prix abordables pour tous, des séances à partir de 5€, mais également des soirées à thème, des séances déguisées, des possibilités pour les enfants de fêter leur anniversaire, des tournois Mario Kart… sans oublier le festival international du film d'animation ''Les Nuits Magiques'' ainsi que le festival du film d'animation pour la petite enfance ''Les P'tits Cartooneurs''  !</p>
-                </div>
-                <div>
-                    <img src=img-portrait\1.jpg>
-                    <p>Directeur & programmateur
-                        Bureau administratif
-                        Cofondateur de Flip-Book
-                        Et passionné d'animation</p>
-                </div>
-                <div>
-                    <img src=img-portrait\2.jpg>
-                    <p>Contact : 
+                    <p>
                         05.56.51.76.60
-                        contact@cinemalefestival.fr</p>
+                        contact@cinemalefestival.fr
+                        09.51.99.04.80
                 </div>
             </div>
         </div>
@@ -114,6 +95,13 @@
         <div><!--div avec la team cinema-->
             <h2>Notre équipe : </h2>
             <div>
+                <div>
+                    <img src=img-portrait\1.jpg>
+                    <p>Directeur & programmateur
+                        Bureau administratif
+                        Cofondateur de Flip-Book
+                        Et passionné d'animation</p>
+                </div>
                 <div>
                     <img src=img-portrait\3.jpg>
                     <p>Projectionniste & Animateur
@@ -123,13 +111,12 @@
                 </div>
                 <div>
                     <h3>Fabrice de la ROSA</h3>
+                    <img src=img-portrait\2.jpg>
                     <div><p>Projectionniste & Animatrice
                         Cinéma "Le Festival"
                         Accueil
-                        </p></div>
-                    <div><p>Contact : 
-                        09.51.99.04.80
-                        contact@cinemalefestival.fr</p></div>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
