--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             <div class="col">
                 <p>Projection à la demande</p>
             </div>
+            <div>
+                <img src = img-logo\Flech-lien.png>
+            </div>
         </div>
     </div>
 
