--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
 <body>
     <header>
-        <div><!--le menu-->
-            <div><p>Programmation</p></div>
-            <div><p>Ateliers</p></div>
-            <div><p>Notre cinéma</p></div>
-            <div><p>Contact</p></div>
-            <div><img src =Img-logo\logo.png></div><!--ici le logo-->
+        <div class="row"><!--le menu-->
+            <div class="col"><p>Programmation</p></div>
+            <div class="col"><p>Ateliers</p></div>
+            <div class="col"><p>Notre cinéma</p></div>
+            <div class="col"><p>Contact</p></div>
+            <div class="col"><img src =Img-logo\logo.png></div><!--ici le logo-->
         </div>
     </header>
     <div> <!-- texte de bienvenu-->
@@ -56,7 +56,7 @@
             <div class="col">
                 <p>Projection à la demande</p>
             </div>
-            <div>
+            <div class="col">
                 <img src = img-logo\Flech-lien.png>
             </div>
         </div>
@@ -84,7 +84,7 @@
         </div>
     
         <div>
-            <div><!-- div avec le text, celui de martin-->
+            <div><!-- div contact-->
                 <h2>Nos Contacts </h2>
                 <div>
                     <p>
@@ -93,12 +93,18 @@
                         09.51.99.04.80
                 </div>
             </div>
+            <div>
+                <div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3177.0318191972688!2d-0.5648688286896452!3d44.813136927981915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5527aac4575fe1%3A0x7daa99163ab271bf!2sLe%20Festival!5e0!3m2!1sfr!2sfr!4v1603199447077!5m2!1sfr!2sfr" width="1890" height="960" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div><!--mettre la carte google ici-->
+            </div>
         </div>
     
         <div><!--div avec la team cinema-->
             <h2>Notre équipe : </h2>
             <div>
                 <div>
+                    <h3>Fabrice de la ROSA</h3>
                     <img src=img-portrait\1.jpg>
                     <p>Directeur & programmateur
                         Bureau administratif
@@ -106,6 +112,7 @@
                         Et passionné d'animation</p>
                 </div>
                 <div>
+                    <h3>Severine</h3>
                     <img src=img-portrait\3.jpg>
                     <p>Projectionniste & Animateur
                         Cinéma "Le Festival"
@@ -113,7 +120,7 @@
                         </p>
                 </div>
                 <div>
-                    <h3>Fabrice de la ROSA</h3>
+                    <h3>Christoph Jule</h3>
                     <img src=img-portrait\2.jpg>
                     <div><p>Projectionniste & Animatrice
                         Cinéma "Le Festival"
@@ -125,27 +132,20 @@
         </div>
     </div>
 
-    <div>
-        <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3177.0318191972688!2d-0.5648688286896452!3d44.813136927981915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5527aac4575fe1%3A0x7daa99163ab271bf!2sLe%20Festival!5e0!3m2!1sfr!2sfr!4v1603199447077!5m2!1sfr!2sfr" width="1890" height="960" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        </div><!--mettre la carte google ici-->
-    </div>
-
     <footer>
         <div><!--les boutons menu-->
             <div>
                 <h3>Programmation </h3>
             </div>
             <div>
-                <div></div><!--logo-->
-                <div></div><!--info-->
-                <div></div>
-                <div></div><!--logo facebook et insta-->
+                <h3>Notre Cinéma</h3>
             </div>
             <div>
-                <h3>Notre Cinéma</h3></div>
+                <h3>Contact</h3>
+            </div>
             <div>
-                <h3>Contact</h3></div>
+                <h3>Ateliert</h3>
+            </div>
         </div>
         <div>
             <div><img src = img-logo\logo.png></div><!--logo-->
