--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <body>
     <header>
+    <div class="content">
         <div class="row"><!--le menu-->
             <div class="col"><p>Programmation</p></div>
             <div class="col"><p>Ateliers</p></div>
@@ -26,21 +27,25 @@
             <div class="col"><p>Contact</p></div>
             <div class="col"><img src =Img-logo\logo.png></div><!--ici le logo-->
         </div>
+    </div>
     </header>
-    <div> <!-- texte de bienvenu-->
-        <h1>Bienvenue au Cinema Le Festival !</h1>
-        <p>Specialisé dans le cinéma d'animation et d'effets spéciaux à Bègles !</p>
+    <div class="content">
+        <div class="row">
+            <div class="col"> <!-- texte de bienvenu-->
+               <h1>Bienvenue au Cinema Le Festival !</h1>
+                <p>Specialisé dans le cinéma d'animation et d'effets spéciaux à Bègles !</p>
+            </div>
     </div>
 
-    <div> 
+    <div class="row">
         <h2>Nos Films à l'affiche</h2>
-        <div></div> <!-- div avec le boostrap-->
+        <div class="row"></div> <!-- div avec le boostrap-->
         <p>Voir plus de films</p>
     </div>
 
-    <div> 
+    <div class="row"> 
         <h2>Nos Événements</h2>
-        <div></div> <!-- div avec le boostrap2-->
+        <div class="row"></div> <!-- div avec le boostrap2-->
         <p>Voir plus  d'événement</p>
     </div>
 
@@ -63,20 +68,20 @@
     </div>
 
     <div>
-        <div><!-- div avec le text, celui de martin-->
+        <div class="row"><!-- div avec le text, celui de martin-->
             <h2>Notre Cinéma</h2>
             <img src = img-logo\image-cine.jpg>
-            <div>
+            <div class="row">
                 <h3>Ici vous pouvez retrouver des informations au sujet de notre cinéma</h3>
             </div>
-            <div>
+            <div class="row">
                 <p>Situé à la barrière de Bègles, ''Le Festival'' propose des prix abordables pour tous, des séances à partir de 5€, mais également des soirées à thème, des séances déguisées, des possibilités pour les enfants de fêter leur anniversaire, des tournois Mario Kart… sans oublier le festival international du film d'animation ''Les Nuits Magiques'' ainsi que le festival du film d'animation pour la petite enfance ''Les P'tits Cartooneurs''  !</p>
             </div>
-            <div>
+            <div class="row">
                 <p>Deux salles Paul GRIMAULT et René LALOUX 
                     (290 et 78 places) ; Accès handicapés ; 35 mm ; 3D</p>
             </div>
-            <div>
+            <div class="row">
                 <p>Autant de bonnes raisons de venir
                     au cinéma ''Le Festival'' ! </p>
             </div>
@@ -131,6 +136,7 @@
             </div>
         </div>
     </div>
+</div>
 
     <footer>
         <div><!--les boutons menu-->
