image avec titre

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>Gabriel Paglia</title>
+        <title>Cinéma le Festival</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png" />
@@ -25,7 +25,8 @@
             <div class="col"><p>Ateliers</p></div>
             <div class="col"><p>Notre cinéma</p></div>
             <div class="col"><p>Contact</p></div>
-            <div class="col"><img src =Img-logo\logo.png></div><!--ici le logo-->
+            <div class="col"><img src =Img-logo\logo.png
+                title = "Notre logo"></div><!--ici le logo-->
         </div>
     </div>
     </header>
@@ -62,7 +63,8 @@
                 <p>Projection à la demande</p>
             </div>
             <div class="col">
-                <img src = img-logo\Flech-lien.png>
+                <img src = img-logo\Flech-lien.png
+                title = "voir plus de services">
             </div>
         </div>
     </div>
@@ -70,7 +72,8 @@
     <div>
         <div class="row"><!-- div avec le text, celui de martin-->
             <h2>Notre Cinéma</h2>
-            <img src = img-logo\image-cine.jpg>
+            <img src = img-logo\image-cine.jpg
+            title = "notre cinéma">
             <div class="row">
                 <h3>Ici vous pouvez retrouver des informations au sujet de notre cinéma</h3>
             </div>
@@ -110,7 +113,8 @@
             <div>
                 <div>
                     <h3>Fabrice de la ROSA</h3>
-                    <img src=img-portrait\1.jpg>
+                    <img src=img-portrait\1.jpg
+                    title ="Fabrice de la ROSA">
                     <p>Directeur & programmateur
                         Bureau administratif
                         Cofondateur de Flip-Book
@@ -118,16 +122,18 @@
                 </div>
                 <div>
                     <h3>Severine</h3>
-                    <img src=img-portrait\3.jpg>
-                    <p>Projectionniste & Animateur
+                    <img src=img-portrait\3.jpg
+                    title = "Severine">
+                    <p>Projectionniste & Animatrice
                         Cinéma "Le Festival"
                         Chef d'ateliers
                         </p>
                 </div>
                 <div>
                     <h3>Christoph Jule</h3>
-                    <img src=img-portrait\2.jpg>
-                    <div><p>Projectionniste & Animatrice
+                    <img src=img-portrait\2.jpg
+                    title = "Christoph Jule">
+                    <div><p>Projectionniste & Animateur
                         Cinéma "Le Festival"
                         Accueil
                         </p>
@@ -154,12 +160,15 @@
             </div>
         </div>
         <div>
-            <div><img src = img-logo\logo.png></div><!--logo-->
+            <div><img src = img-logo\logo.png
+                title = "notre logo"></div><!--logo-->
             <div></div><!--info-->
             <div></div>
             <div>
-                <img src = img-logo\pngegg_(9).png>
-                <img src = img-logo\pngegg_(10).png>
+                <img src = img-logo\pngegg_(9).png
+                title ="notre page Facebook">
+                <img src = img-logo\pngegg_(10).png
+                title = "notre Instagram">
             </div><!--logo facebook et insta-->
         </div>
         <div>
