--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>Gabriel Paglia</title>
+        <title>Cinema Lefestival</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png" />
@@ -38,17 +38,20 @@
     </div>
 
     <div class="row">
+        <div class="col">
         <h2>Nos Films à l'affiche</h2>
         <div class="row"></div> <!-- div avec le boostrap-->
         <p>Voir plus de films</p>
+        </div>
     </div>
 
-    <div class="row"> 
+    <div class="row">
+    <div class="col"> 
         <h2>Nos Événements</h2>
         <div class="row"></div> <!-- div avec le boostrap2-->
         <p>Voir plus  d'événement</p>
     </div>
-
+    </div>
     <div class="col">
         <h2>Nos Services</h2>
         <div class="row"><!-- div avec les boutons-->
