--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <div class="col"><p>Notre cinéma</p></div>
             <div class="col"><p>Contact</p></div>
             <div class="col"><img src =Img-logo\logo.png
-                title = "Notre logo"></div><!--ici le logo-->
+                title = "Notre logo"
+                alt = "Notre logo"></div><!--ici le logo-->
         </div>
     </div>
     </header>
@@ -64,7 +65,8 @@
             </div>
             <div class="col">
                 <img src = img-logo\Flech-lien.png
-                title = "voir plus de services">
+                title = "voir plus de services"
+                alt="voir plus de services">
             </div>
         </div>
     </div>
@@ -73,7 +75,8 @@
         <div class="row"><!-- div avec le text, celui de martin-->
             <h2>Notre Cinéma</h2>
             <img src = img-logo\image-cine.jpg
-            title = "notre cinéma">
+            title = "notre cinéma"
+            alt ="notre cinéma">
             <div class="row">
                 <h3>Ici vous pouvez retrouver des informations au sujet de notre cinéma</h3>
             </div>
@@ -114,7 +117,8 @@
                 <div>
                     <h3>Fabrice de la ROSA</h3>
                     <img src=img-portrait\1.jpg
-                    title ="Fabrice de la ROSA">
+                    title ="Fabrice de la ROSA"
+                    alt = "Fabrice de la ROSA">
                     <p>Directeur & programmateur
                         Bureau administratif
                         Cofondateur de Flip-Book
@@ -123,7 +127,8 @@
                 <div>
                     <h3>Severine</h3>
                     <img src=img-portrait\3.jpg
-                    title = "Severine">
+                    title = "Severine"
+                    alt = "Séverine">
                     <p>Projectionniste & Animatrice
                         Cinéma "Le Festival"
                         Chef d'ateliers
@@ -132,7 +137,8 @@
                 <div>
                     <h3>Christoph Jule</h3>
                     <img src=img-portrait\2.jpg
-                    title = "Christoph Jule">
+                    title = "Christoph Jule"
+                    alt title ="Christoph Jule">
                     <div><p>Projectionniste & Animateur
                         Cinéma "Le Festival"
                         Accueil
@@ -161,14 +167,17 @@
         </div>
         <div>
             <div><img src = img-logo\logo.png
-                title = "notre logo"></div><!--logo-->
+                title = "notre logo"
+                alt = "notre logo"></div><!--logo-->
             <div></div><!--info-->
             <div></div>
             <div>
                 <img src = img-logo\pngegg_(9).png
-                title ="notre page Facebook">
+                title ="notre page Facebook"
+                alt = "notre page Facebook">
                 <img src = img-logo\pngegg_(10).png
-                title = "notre Instagram">
+                title = "notre Instagram"
+                alt="notre Instagram">
             </div><!--logo facebook et insta-->
         </div>
         <div>
