presque finti d'organiser les col

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <p>Voir plus  d'événement</p>
     </div>
     </div>
+    <div class="row">
     <div class="col">
         <h2>Nos Services</h2>
         <div class="row"><!-- div avec les boutons-->
@@ -73,13 +74,13 @@
             </div>
         </div>
     </div>
+    </div>
 
     <div>
         <div class="row"><!-- div avec le text, celui de martin-->
+            
             <h2>Notre Cinéma</h2>
-            <img src = img-logo\image-cine.jpg
-            title = "notre cinéma"
-            alt ="notre cinéma">
+        <div class="col">
             <div class="row">
                 <h3>Ici vous pouvez retrouver des informations au sujet de notre cinéma</h3>
             </div>
@@ -94,7 +95,12 @@
                 <p>Autant de bonnes raisons de venir
                     au cinéma ''Le Festival'' ! </p>
             </div>
-            <p></p>
+        </div>
+            <div class="col">
+            <img src = img-logo\image-cine.jpg
+            title = "notre cinéma"
+            alt ="notre cinéma">
+            </div>
         </div>
     
         <div>
