--- a/index.html
+++ b/index.html
@@ -113,8 +113,11 @@
                         d'animation pour la petite enfance ''Les P'tits Cartooneurs'' !</p>
                 </div>
                 <div class="row">
-                    <p>Deux salles Paul GRIMAULT et René LALOUX
-                        (290 et 78 places) ; Accès handicapés ; 35 mm ; 3D</p>
+                    <ul>
+                        <li>Deux salles Paul GRIMAULT et René LALOUX (290 et 78 places)</li>
+                        <li>Accès handicapés</li> 
+                        <li>35 mm</li> 
+                        <li>3D</li></ul>
                 </div>
                 <div class="row">
                     <p>Autant de bonnes raisons de venir
