--- a/index.html
+++ b/index.html
@@ -89,18 +89,7 @@
                 </ul>
             </div>
             <div class="row">
-                <!-- div avec les boutons-->
-                <div class="col">
-                    <p>Initiation dessin animés</p>
-                </div>
-                <div class="col">
-                    <p>Stage réalisation</p>
-                </div>
-                <div class="col">
-                    <p>Projection à la demande</p>
-                </div>
-                <div class="col">
-                    <img src=img-logo\Flech-lien.png title="voir plus de services">
+                <p>Autant de bonnes raisons de venir au Cinéma ''Le Festival'' !</p>
                 </div>
             </div>
         </div>
