--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link rel="stylesheet" href="./css/style.css" /> 
+    <link rel="stylesheet" href="./css/buttons.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
        
 
-
+</head>
 <body>
 
 
@@ -29,22 +30,26 @@
                 <li><a href="#ecran3" class="puce puce3"> </a> </li>
             </ul>
         </nav>
-
+         
 
         <div class="content">
             <div class="row">
                 <!--le menu-->
                 <div class="col">
-                    <p>Programmation</p>
+                    <section class="buttons">
+                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1">Programmation</a> 
                 </div>
                 <div class="col">
-                    <p>Ateliers</p>
+                    <section class="buttons">
+                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1">Ateliers</a> 
                 </div>
                 <div class="col">
-                    <p>Notre cinéma</p>
+                    <section class="buttons">
+                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1">Notre Cinéma</a> 
                 </div>
                 <div class="col">
-                    <p>Contact</p>
+                    <section class="buttons">
+                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1">Contact</a> 
                 </div>
                 <div class="col"><img src=Img-logo\logo.png title="Notre logo" alt="Notre logo"></div>
                 <!--ici le logo-->
