on vient de mannoncer la mauvaise nouvelle

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <div>
                     <div class= "col">
                         <h3>Fabrice de la ROSA</h3>
-                        <img src=img-portrait\1.jpg title="Fabrice de la ROSA" alt="Fabrice de la ROSA">
+                        <img src=img-portrait\1.png title="Fabrice de la ROSA" alt="Fabrice de la ROSA">
                         <p>Directeur & programmateur
                             Bureau administratif
                             Cofondateur de Flip-Book
@@ -181,7 +181,7 @@
                     </div>
                     <div class= "col">
                         <h3>Severine</h3>
-                        <img src=img-portrait\3.jpg title="Severine" alt="Séverine">
+                        <img src=img-portrait\3.png title="Severine" alt="Séverine">
                         <p>Projectionniste & Animatrice
                             Cinéma "Le Festival"
                             Accueil
@@ -189,7 +189,7 @@
                     </div>
                     <div class= "col">
                         <h3>Christoph Jule</h3>
-                        <img src=img-portrait\2.jpg title="Christoph Jule" alt title="Christoph Jule">
+                        <img src=img-portrait\2.png title="Christoph Jule" alt title="Christoph Jule">
                         <div>
                             <p>Projectionniste & Animateur
                                 Cinéma "Le Festival"
